PA5/tests/negative-examples/substringStartsOutside.cl
class Main inherits IO {
  main() : Object { 
    "hello whirled".substr(200, 5)
  } ;
} ; 
